--- a/sql/index.html
+++ b/sql/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
     <meta name="keywords"
         content="웹스토리보이, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
-    <title>Webstoryboy | SVG Animation</title>
+    <title>Webstoryboy | MySQL</title>
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/docs.min.css" rel="stylesheet">
@@ -84,7 +84,7 @@
     </header>
     <div class="bs-header bgs5" id="content">
         <div class="container">
-            <h1>SVG Animation</h1>
+            <h1>My SQL &lt;/doc&gt;</h1>
             <p><a href="https://kimsangjun.tistory.com" target="_blank">https://kimsangjun.tistory.com</a></p>
         </div>
     </div>
@@ -115,10 +115,270 @@
                 <div class="bs-docs-section">
                     <h2 id="intro3" class="page-header">MySQL 실행</h2>
                     <div class="bs-callout bs-callout-info">
-
+                        윈도우 : cs MAMP/bin/mysql/bin<br>
+                        로그인 : mysql -uroot -proot
                     </div>
+<pre><code class="language-js">Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 4
+Server version: 5.7.24 MySQL Community Server (GPL)
+
+Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+</code></pre>
+                    <div class="bs-callout bs-callout-info">
+                        맥 : cd Application/mamp/Library/bin<br>
+                        로그인 : ./mysql -uroot -proot
+                    </div>
+<pre><code class="language-js">gimsangjun@gimsangjun-ui-MacBookAir bin % ./mysql -uroot -proot                           
+mysql: [Warning] Using a password on the command line interface can be insecure.
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+Your MySQL connection id is 4
+Server version: 5.7.34 MySQL Community Server (GPL)
+
+Copyright (c) 2000, 2021, Oracle and/or its affiliates.
+
+Oracle is a registered trademark of Oracle Corporation and/or its
+affiliates. Other names may be trademarks of their respective
+owners.
+
+Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
+
+</code></pre>
                 </div>
                 <!-- //intro2 -->
+                <!-- //intro1 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">데이터베이스</h2>
+                    <h3 id="intro4-1" class="page-header">데이터베이스 만들기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        create database [데이터 베이스 이름];
+                    </div>
+<pre><code class="language-js">mysql> create database sample01;
+Query OK, 1 row affected (0.01 sec)
+</code></pre>
+                    <h3 id="intro4-2" class="page-header">데이터베이스 보기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        show databases;
+                    </div>
+<pre><code class="language-js">mysql> show databases;
++--------------------+
+| Database           |
++--------------------+
+| information_schema |
+| mysql              |
+| performance_schema |
+| sample01           |
+| sys                |
++--------------------+
+5 rows in set (0.00 sec)
+</code></pre>
+                    <h3 id="intro4-3" class="page-header">데이터베이스 사용</h3>
+                    <div class="bs-callout bs-callout-info">
+                        use 데이터베이스 이름;
+                    </div>
+<pre><code class="language-js">mysql> use sample01;
+    Database changed
+</code></pre>
+                    <h3 id="intro4-4" class="page-header">데이터베이스 삭제</h3>
+                    <div class="bs-callout bs-callout-info">
+                        drop database [데이터 베이스 이름];
+                    </div>
+<pre><code class="language-js">mysql> drop database sample02;
+    Query OK, 0 rows affected (0.01 sec)
+</code></pre>
+                    </div>
+                <!-- //intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">테이블</h2>
+
+                    <h3 id="intro5-1" class="page-header">테이블 만들기</h3>
+                    <div class="bs-callout bs-callout-info">
+                                        create table member (
+                        myMemberID int(10) unsigned auto_increment,
+                        youEmail varchar(40) NOT NULL,
+                        youName varchar(20) NOT NULL,
+                        youPass varchar(20) NOT NULL,
+                        youBirth int(20) NOT NULL,
+                        regTime int(20) NOT NULL,
+                        PRIMARY KEY (myMemberID)
+                    ) charset=utf8;
+                    </div>
+<pre><code class="language-js">mysql> create table member (
+    ->     myMemberID int(10) unsigned auto_increment,
+    ->     youEmail varchar(40) NOT NULL,
+    ->     youName varchar(20) NOT NULL,
+    ->     youPass varchar(20) NOT NULL,
+    ->     youBirth int(20) NOT NULL,
+    ->     regTime int(20) NOT NULL,
+    ->     PRIMARY KEY (myMemberID)
+    -> ) charset=utf8;
+Query OK, 0 rows affected (0.03 sec)
+</code></pre>
+
+                    <h3 id="intro5-2" class="page-header">테이블 전체보기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        show tables;
+                    </div>
+<pre><code class="language-js">mysql> show tables;
++--------------------+
+| Tables_in_sample01 |
++--------------------+
+| member             |
++--------------------+
+1 row in set (0.00 sec)
+</code></pre>
+
+                    <h3 id="intro5-3" class="page-header">테이블 보기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        desc 테이블 이름;
+                    </div>
+<pre><code class="language-js">mysql> desc member;
++------------+------------------+------+-----+---------+----------------+
+| Field      | Type             | Null | Key | Default | Extra          |
++------------+------------------+------+-----+---------+----------------+
+| myMemberID | int(10) unsigned | NO   | PRI | NULL    | auto_increment |
+| youEmail   | varchar(40)      | NO   |     | NULL    |                |
+| youName    | varchar(20)      | NO   |     | NULL    |                |
+| youPass    | varchar(20)      | NO   |     | NULL    |                |
+| youBirth   | int(20)          | NO   |     | NULL    |                |
+| regTime    | int(20)          | NO   |     | NULL    |                |
++------------+------------------+------+-----+---------+----------------+
+6 rows in set (0.02 sec)
+</code></pre>
+
+                    <h3 id="intro5-4" class="page-header">테이블 삭제</h3>
+                    <div class="bs-callout bs-callout-info">
+                        drop table 테이블 이름;
+                    </div>
+<pre><code class="language-js">mysql> drop table member;
+Query OK, 0 rows affected (0.01 sec)
+</code></pre>
+
+                    <h3 id="intro5-5" class="page-header">테이블 복사</h3>
+                    <div class="bs-callout bs-callout-info">
+                    </div>
+<pre><code class="language-js">
+</code></pre>
+                </div>
+                <!-- //intro5 -->
+
+                 <!-- //intro6 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">테이블 데이터</h2>
+                    <h3 id="intro6-1" class="page-header">테이블 데이터</h3>
+                    <div class="bs-callout bs-callout-info">
+                        INSERT INTO 테이블 이름(필드명) VALUE(데이터)
+                    </div>
+<pre><code class="language-js">
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('mo0647@naver.com', '김민정', '1234', '19970530', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('jwor124@naver.com', '정은비', '1234', '19990303', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kimlh3743@gmail.com', '김이형', '1234', '20011009','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('leesh3432@naver.com','이영환','1234','19970205','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sshin4882@naver.com','박현신','1234','19990303','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kkb7528@naver.com','권규비','1234','19990303','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('piowm123@gmail.com', '문병내', '1234', '19990303', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUE('ghkddbwls96@gmail.com', '황유진', '1234', '19990303', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('happyham52@gmail.com','이중호','1234','19970731','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('eodnjs9605@naver.com','김대원','1234','19960530','1234567')
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('wjsqhdus971007@gmail.com','전보연','1234','19971007','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('noeyheyh@gmail.com','권혜현','1234','19960331','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('hjkang306@gmail.com','강현지','1234','19990303','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sunhey9810@gmail.com', '박선혜', '1234', '19981010', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUE('kde66034@gmail.com', '김동언', '1234', '19700101', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise1109@gmail.com', '이하은', '1234', '19990303', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('oranssy@naver.com', '최진주', '3950', '20010415', '1234567');
+</code></pre>
+                    <h3 id="intro6-2" class="page-header">테이블 불러오기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        SELECT 필드명 FROM 테이븗명 WHERE 조건
+                    </div>
+                    <h4>전체 데이터 불러오기</h4>
+<pre><code class="language-js">mysql> SELECT * FROM member;
++------------+------------------------+------------+---------+----------+---------+
+| myMemberID | youEmail               | youName    | youPass | youBirth | regTime |
++------------+------------------------+------------+---------+----------+---------+
+|          1 | to_before@naver.com    | 김상준       | 1234    | 19940404 |       4 |
+|          2 | to_before@naver.com    | 김상준       | 1234    | 19940404 | 1234567 |
+|          3 | webstoryboy@naver.com  | 황상연       | 1234    | 19990303 | 1234567 |
+|          4 | thdtjdgml415@naver.com | 송성희       | 1234    | 19970415 | 1234567 |
+|          5 | mo0647@naver.com       | 김민정       | 1234    | 19970530 | 1234567 |
+|          6 | tjrwnsrkdtj@naver.com  | 김석준       | 1234    | 19941009 | 1234567 |
+|          7 | jwor124@naver.com      | 정은비       | 1234    | 19990303 | 1234567 |
+|          8 | kimlh3743@gmail.com    | 김이형       | 1234    | 20011009 | 1234567 |
+|          9 | leesh3432@naver.com    | 이영환       | 1234    | 19970205 | 1234567 |
+|         10 | sshin4882@naver.com    | 박현신       | 1234    | 19990303 | 1234567 |
+|         11 | kkb7528@naver.com      | 권규비       | 1234    | 19990303 | 1234567 |
+|         12 | piowm123@gmail.com     | 문병내       | 1234    | 19990303 | 1234567 |
+|         13 | ghkddbwls96@gmail.com  | 황유진       | 1234    | 19990303 | 1234567 |
+|         14 | happyham52@gmail.com   | 이중호       | 1234    | 19970731 | 1234567 |
+|         15 | noeyheyh@gmail.com     | 권혜현       | 1234    | 19960331 | 1234567 |
+|         16 | hjkang306@gmail.com    | 강현지       | 1234    | 19990303 | 1234567 |
+|         17 | sunhey9810@gmail.com   | 박선혜       | 1234    | 19981010 | 1234567 |
+|         18 | kde66034@gmail.com     | 김동언       | 1234    | 19700101 | 1234567 |
+|         19 | praise1109@gmail.com   | 이하은       | 1234    | 19990303 | 1234567 |
+|         20 | oranssy@naver.com      | 최진주       | 3950    | 20010415 | 1234567 |
++------------+------------------------+------------+---------+----------+---------+
+20 rows in set (0.01 sec)
+</code></pre>
+                    <h4 class="pt20">myMemberID가 6번인 경우</h4>
+<pre><code class="language-js">mysql> SELECT * FROM member WHERE myMemberID = 6;
++------------+-----------------------+-----------+---------+----------+---------+
+| myMemberID | youEmail              | youName   | youPass | youBirth | regTime |
++------------+-----------------------+-----------+---------+----------+---------+
+|          6 | tjrwnsrkdtj@naver.com | 김석준    | 1234    | 19941009 | 1234567 |
++------------+-----------------------+-----------+---------+----------+---------+
+1 row in set (0.01 sec)
+</code></pre>
+                    <h4 class="pt20">email 중에 naver 텍스트를 포함하고 있는 경우</h4>
+<pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
++------------+------------------------+------------+---------+----------+---------+
+| myMemberID | youEmail               | youName    | youPass | youBirth | regTime |
++------------+------------------------+------------+---------+----------+---------+
+|          1 | to_before@naver.com    | 김상준     | 1234    | 19940404 |       4 |
+|          2 | to_before@naver.com    | 김상준     | 1234    | 19940404 | 1234567 |
+|          3 | webstoryboy@naver.com  | 황상연     | 1234    | 19990303 | 1234567 |
+|          4 | thdtjdgml415@naver.com | 송성희     | 1234    | 19970415 | 1234567 |
+|          5 | mo0647@naver.com       | 김민정     | 1234    | 19970530 | 1234567 |
+|          6 | tjrwnsrkdtj@naver.com  | 김석준     | 1234    | 19941009 | 1234567 |
+|          7 | jwor124@naver.com      | 정은 비    | 1234    | 19990303 | 1234567 |
+|          9 | leesh3432@naver.com    | 이영환     | 1234    | 19970205 | 1234567 |
+|         10 | sshin4882@naver.com    | 박현신     | 1234    | 19990303 | 1234567 |
+|         11 | kkb7528@naver.com      | 권규비     | 1234    | 19990303 | 1234567 |
+|         20 | oranssy@naver.com      | 최진주     | 3950    | 20010415 | 1234567 |
++------------+------------------------+------------+---------+----------+---------+
+11 rows in set (0.01 sec)
+</code></pre>
+                    <h3 id="intro6-3" class="page-header">테이블 데이터</h3>
+                    <div class="bs-callout bs-callout-info">
+                        INSERT INTO 테이블 이름(필드명) VALUE(데이터)
+                    </div>
+<pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '04')
+</code></pre>
+                    <h3 id="intro6-4" class="page-header">테이블 데이터</h3>
+                    <div class="bs-callout bs-callout-info">
+                        INSERT INTO 테이블 이름(필드명) VALUE(데이터)
+                    </div>
+<pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '04')
+</code></pre>
+                </div>
+
+                 <!-- //intro1 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">MySQL 설치</h2>
+                    <div class="bs-callout bs-callout-info">
+                        MAMP란 웹사이트를 개발할 때 쓰이는 기술 스택인 macOS, Apache, MySQL, pHP 의 약어이자 솔루션 스텍이다<br>
+                        <a href="https://www.mamp.info/en/downloads/">https://www.mamp.info/en/downloads/</a>
+                    </div>
+                </div>
             </div>
             <!-- //col-md-9 -->
             <div class="col-md-3">
@@ -126,8 +386,34 @@
                     <ul class="nav bs-sidenav">
                         <li class="active"><a href="#intro1">MySQL</a></li>
                         <li><a href="#intro2">MySQL 설치</a></li>
-                        <li><a href="#intro2">MySQL 실행</a></li>
-                    </ul>
+                        <li><a href="#intro3">MySQL 실행</a></li>
+                        <li><a href="#intro4">데이터베이스</a>
+                            <ul class="nav">
+                                <li><a href="#intro4-1">데이터베이스 만들기</a></li>
+                                <li><a href="#intro4-1">데이터베이스 보기</a></li>
+                                <li><a href="#intro4-1">데이터베이스 사용</a></li>
+                                <li><a href="#intro4-1">데이터베이스 삭제</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#intro5">테이블</a>
+                            <ul class="nav">
+                                <li><a href="#intro5-1">테이블 만들기</a></li>
+                                <li><a href="#intro5-2">테이블 전체보기</a></li>
+                                <li><a href="#intro5-3">테이블 보기</a></li>
+                                <li><a href="#intro5-4">테이블 사용</a></li>
+                                <li><a href="#intro5-5">테이블 삭제</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#intro6">테이블 데이터</a>
+                            <ul class="nav">
+                                <li><a href="#intro6-1">데이터 입력하기</a></li>
+                                <li><a href="#intro6-2">데이터 불러오기</a></li>
+                                <li><a href="#intro6-3">데이터 수정하기</a></li>
+                                <li><a href="#intro6-4">데이터 삭제하기</a></li>
+                            </ul></li>
+                        <li><a href="#intro7">테이블 수정</a></li>
+                        <li><a href="#intro8">테이블 JOIN</a></li>
+                    </ul>ALTER TABLE member;
                 </div>
             </div>
             <!-- //col-md-3 -->
