--- a/javascript/study/study_22.09/web_MySQL_01.html
+++ b/javascript/study/study_22.09/web_MySQL_01.html
@@ -346,7 +346,7 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('ooooo_
 +------------+-----------------------+-----------+---------+----------+---------+
 | myMemberID | youEmail              | youName   | youPass | youBirth | regTime |
 +------------+-----------------------+-----------+---------+----------+---------+
-|          6 | tjrwnsrkdtj@naver.com | 김석준    | 1234    | 19941009 | 1234567 |
+|          6 | ooooo_ooooo@naver.com | 김수용      | 1234    | 19941009 | 1234567 |
 +------------+-----------------------+-----------+---------+----------+---------+
 1 row in set (0.01 sec)
 </code></pre>
