--- a/sql/index.html
+++ b/sql/index.html
@@ -275,27 +275,27 @@ Query OK, 0 rows affected (0.01 sec)
                         INSERT INTO 테이블 이름(필드명) VALUE(데이터)
                     </div>
 <pre><code class="language-js">
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('mo0647@naver.com', '김민정', '1234', '19970530', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('jwor124@naver.com', '정은비', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kimlh3743@gmail.com', '김이형', '1234', '20011009','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('leesh3432@naver.com','이영환','1234','19970205','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sshin4882@naver.com','박현신','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('kkb7528@naver.com','권규비','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('piowm123@gmail.com', '문병내', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUE('ghkddbwls96@gmail.com', '황유진', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('happyham52@gmail.com','이중호','1234','19970731','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('eodnjs9605@naver.com','김대원','1234','19960530','1234567')
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('wjsqhdus971007@gmail.com','전보연','1234','19971007','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('noeyheyh@gmail.com','권혜현','1234','19960331','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('hjkang306@gmail.com','강현지','1234','19990303','1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('sunhey9810@gmail.com', '박선혜', '1234', '19981010', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUE('kde66034@gmail.com', '김동언', '1234', '19700101', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('praise1109@gmail.com', '이하은', '1234', '19990303', '1234567');
-INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('oranssy@naver.com', '최진주', '3950', '20010415', '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404','20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('webstoryboy@naver.com','황상연','1234','19990303','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('thdtjdgml415@naver.com', '송성희', '1234', '19970415','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('mo0647@naver.com', '김민정', '1234', '19970530','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('tjrwnsrkdtj@naver.com', '김석준', '1234', '19941009','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('jwor124@naver.com', '정은비', '1234', '19990303','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('kimlh3743@gmail.com', '김이형', '1234', '20011009','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('leesh3432@naver.com','이영환','1234','19970205','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('sshin4882@naver.com','박현신','1234','19990303','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('kkb7528@naver.com','권규비','1234','19990303','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('piowm123@gmail.com', '문병내', '1234', '19990303','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUE('ghkddbwls96@gmail.com', '황유진', '1234', '19990303','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('happyham52@gmail.com','이중호','1234','19970731','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('eodnjs9605@naver.com','김대원','1234','19960530','20' ,'1234567')
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('wjsqhdus971007@gmail.com','전보연','1234','19971007','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('noeyheyh@gmail.com','권혜현','1234','19960331','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('hjkang306@gmail.com','강현지','1234','19990303','20' ,'1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('sunhey9810@gmail.com', '박선혜', '1234', '19981010','20' , '1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUE('kde66034@gmail.com', '김동언', '1234', '19700101','20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('praise1109@gmail.com', '이하은', '1234', '19990303','20','1234567');
+INSERT INTO member(youEmail, youName, youPass, youBirth, youAge, egTime) VALUES('oranssy@naver.com', '최진주', '3950', '20010415','20','1234567');
 </code></pre>
                     <h3 id="intro6-2" class="page-header">테이블 불러오기</h3>
                     <div class="bs-callout bs-callout-info">
@@ -338,6 +338,44 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('oranss
 +------------+-----------------------+-----------+---------+----------+---------+
 1 row in set (0.01 sec)
 </code></pre>
+
+
+
+                    <h4 class="pt20">myMemberID가 6번인 아닌 경우</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE myMemberID &lt;&gt; 6;
+</code></pre>
+
+
+
+
+                    <h4 class="pt20">myMemberID가 5~10번인 아닌 경우</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE myMemberID &gt;=5 AND myMemberID &lt;=10;
+</code></pre>
+
+
+
+
+                    <h4 class="pt20">myMemberID가 5~10번인 경우(범위 조건)</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE myMemberID BETWEEN 5 AND 10;
+</code></pre>
+
+
+
+
+                    <h4 class="pt20">myMemberID가 5~10번인 아닌 경우(범위 조건)</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE myMemberID NOT BETWEEN 5 AND 10;
+</code></pre>
+
+
+
+
+                    <h4 class="pt20">myMemberID가 5~10번인 아닌 경우(해당 조건 불러오기)</h4>
+<pre><code class="language-js">SELECT * FROM member WHERE myMemberID IN(1,4,10,14);
+</code></pre>
+
+
+
+
                     <h4 class="pt20">email 중에 naver 텍스트를 포함하고 있는 경우</h4>
 <pre><code class="language-js">mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
 +------------+------------------------+------------+---------+----------+---------+
@@ -357,18 +395,73 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('oranss
 +------------+------------------------+------------+---------+----------+---------+
 11 rows in set (0.01 sec)
 </code></pre>
-                    <h3 id="intro6-3" class="page-header">테이블 데이터</h3>
-                    <div class="bs-callout bs-callout-info">
-                        INSERT INTO 테이블 이름(필드명) VALUE(데이터)
-                    </div>
-<pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '04')
+
+
+
+
+                    <h4 class="pt20">email 중에 web 텍스트를 시작하는 경우</h4>
+<pre><code class="language-js"> SELECT * FROM member WHERE youEmail LIKE 'web%'; //웹 뒤에는 아무것도 안나오게 %
 </code></pre>
+
+
+
+                    <h4 class="pt20">email 중에 com 텍스트를 시작하는 경우</h4>
+<pre><code class="language-js"> SELECT * FROM member WHERE youEmail LIKE '%com'; //웹 뒤에는 아무것도 안나오게 %
+</code></pre>
+
+
+
+
+                    <h3 id="intro6-3" class="page-header">테이블 수정하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        UPDATE 테이블명(필드명) SET 컬럼명 조건
+                    </div>
+                    <h4 class="pt20">모든 회원의 핸드폰 번호 변경</h4>
+<pre><code class="language-js">UPDATE member SET youPhone = "01000000000";
+</code></pre>
+
+
+
+
                     <h3 id="intro6-4" class="page-header">테이블 데이터</h3>
                     <div class="bs-callout bs-callout-info">
                         INSERT INTO 테이블 이름(필드명) VALUE(데이터)
                     </div>
 <pre><code class="language-js">INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('to_before@naver.com', '김상준', '1234', '19940404', '04')
 </code></pre>
+                </div>
+
+
+
+
+
+                <div class="bs-docs-section">
+                    <h2 id="intro7" class="page-header">테이블 수정</h2>
+                    <h3 id="intro7-1" class="page-header">필드 추가하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        ALTER TABLE 테이블명 ADD 추가할 필드명 AFTER 필드 위치
+                    </div>
+                    <h4>member 테이블 나이 위에 핸드폰 번호 필드를 추가</h4>
+<pre><code class="language-js">ALTER TABLE member ADD youPhone int(20) NOT NULL AFTER youAge;
+</code></pre>
+                    <h4 class="pt20">member 테이블 핸드폰 번호 뒤에 성별 필드를 추가</h4>
+<pre><code class="language-js">ALTER TABLE member ADD youGender enum('m','w','x') default 'x' comment '남자 m, 여자 w' AFTER youPhone;
+</code></pre>
+                    <h3 id="intro7-2" class="page-header">필드 수정하가</h3>
+                    <div class="bs-callout bs-callout-info">
+                        ALTER TABLE 테이블명 MODIFY 수정할 필드명
+                    </div>
+                    <h4>전체 데이터 불러오기</h4>
+<pre><code class="language-js">ALTER TABLE member MODIFY youAge int(10);</code></pre>
+<!-- <pre><code class="language-js">ALTER TABLE member MODIFY youGender enum('m','w');</code></pre> -->
+                    <h3 id="intro7-2" class="page-header">필드 삭제하기</h3>
+                    <div class="bs-callout bs-callout-info">
+                        ALTER TABLE 테이블명 DROP 삭제시킬 필드명;
+                    </div>  
+                    <h4>전체 데이터 불러오기</h4>
+<pre><code class="language-js">ALTER TABLE member DROP youGender;
+</code></pre>
+                </div>
                 </div>
 
                  <!-- //intro1 -->
@@ -410,9 +503,25 @@ INSERT INTO member(youEmail, youName, youPass, youBirth, regTime) VALUES('oranss
                                 <li><a href="#intro6-2">데이터 불러오기</a></li>
                                 <li><a href="#intro6-3">데이터 수정하기</a></li>
                                 <li><a href="#intro6-4">데이터 삭제하기</a></li>
-                            </ul></li>
-                        <li><a href="#intro7">테이블 수정</a></li>
-                        <li><a href="#intro8">테이블 JOIN</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#intro7">테이블 수정</a>
+                            <li><a href="#intro6">테이블 데이터</a>
+                                <ul class="nav">
+                                    <li><a href="#intro7-1">필드 추가하기</a></li>
+                                    <li><a href="#intro7-2">필드 수정하기</a></li>
+                                    <li><a href="#intro7-3">필드 삭제하기</a></li>
+                                </ul>
+                            </li></li>
+                        <li><a href="#intro8">테이블 JOIN</a>
+                            <li><a href="#intro6">테이블 데이터</a>
+                                <ul class="nav">
+                                    <li><a href="#intro6-1">데이터 입력하기</a></li>
+                                    <li><a href="#intro6-2">데이터 불러오기</a></li>
+                                    <li><a href="#intro6-3">데이터 수정하기</a></li>
+                                    <li><a href="#intro6-4">데이터 삭제하기</a></li>
+                                </ul>
+                            </li></li>
                     </ul>ALTER TABLE member;
                 </div>
             </div>
