--- a/javascript/study/study_22.09/web_effect_mouse_02.html
+++ b/javascript/study/study_22.09/web_effect_mouse_02.html
@@ -116,7 +116,7 @@
 </code></pre>
                 </div>
                 <details>
-                    <summary>코드 전체보기</summary>
+                    <summary class="t_box">코드 전체보기</summary>
                     <div class="t_code">
 <pre><code class="language-html">&lt;main id="main"&gt;
     &lt;section id="mouseType"&gt;
@@ -132,7 +132,7 @@
                     </div>
                 </details>
                 <hr>
-                <h2 class="t_tit2">HTML 코드 : 마우스 포인터용 div 생성</h2>
+                <h2 class="t_tit2">JS코드 : 마우스 움직임과 행동에 따라 이벤트 발생시키기</h2>
                 <p class="t_desc2">하단의 코드를 보며 이벤트를 실행시킬 스크립트를 작성해줍니다!</p>
                 <div class="t_code">
 <pre><code class="language-js">const cursor = document.querySelector(".mouse__cursor");
@@ -195,16 +195,16 @@ window.addEventListener("mousemove", e => {
                 <hr>
 
                 <h2 class="t_tit2">결과</h2>
-                <div class="t_iframe" style="min-height : 300px; padding-top:0;">
-                    <iframe src="https://kimsangjunv1.github.io/coding/site/headerType/headerType01.html" frameborder="0"></iframe>
+                <div class="t_iframe" style="min-height : 700px; padding-top:0;">
+                    <iframe src="https://kimsangjunv1.github.io/coding/javascript/effect/mouseEffect02.html" frameborder="0"></iframe>
                 </div>
                 <hr>
                 <div style="display:flex; justify-content:space-between; margin-left:20%; margin-right:20%;">
                     <div class="t_link">
-                        <a href="https://github.com/kimsangjunv1/coding/blob/main/site/headerType/headerType01.html" target="blank">원본 소스 보기</a>
+                        <a href="https://github.com/kimsangjunv1/coding/blob/main/javascript/effect/mouseEffect02.html" target="blank">원본 소스 보기</a>
                     </div>
                     <div class="t_link">
-                        <a href="https://kimsangjunv1.github.io/coding/site/headerType/headerType01.html" target="blank">원본 페이지 보기</a>
+                        <a href="https://kimsangjunv1.github.io/coding/javascript/effect/mouseEffect02.html" target="blank">원본 페이지 보기</a>
                     </div>
                 </div>
                 <!-- 01번 메인 샘플 끝 -->
