--- a/javascript/effect/parallaxEffect.html
+++ b/javascript/effect/parallaxEffect.html
@@ -22,7 +22,10 @@
     <main>
         <div class="intro_menu">
             <ul>
-                <li>01. 마우스 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect03.html">Go</a></li>
+                <li>01. 패럴렉스 이펙트 : 스크롤 값 계산 <a href="parallaxEffect01.html">Go</a></li>
+                <li>02. 패럴렉스 이펙트 :  <a href="parallaxEffect02.html">Go</a></li>
+                <li>03. 패럴렉스 이펙트 :  <a href="parallaxEffect03.html">Go</a></li>
+                <li>04. 패럴렉스 이펙트 :  <a href="parallaxEffect04.html">Go</a></li>
             </ul>
         </div>
     </main>
