--- a/javascript/study/study_22.09/web_scss_install.html
+++ b/javascript/study/study_22.09/web_scss_install.html
@@ -111,7 +111,10 @@
     }
 </code></pre>
                     </div>
-                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_18.png" alt="">
+                    <h2 class="t_tit2">마치며</h2>
+                    <p class="t_desc2">세팅이 모두 끝났습니다 <br>
+                    하단과 같이 scss 파일을 편집 후 저장시 상단의 .min.css/.css 가 자동으로 생성되었다면 올바르게 설치가 완료된겁니다!</p>
+                    <img style="width: 100%; border-radius: 15px; border: 1px solid #ededed; margin-top:15px;" src="https://raw.githubusercontent.com/kimsangjunv1/coding/main/assets/img/screenshot_19.png" alt="">
                 
                 
                 </div>
