--- a/javascript/effect/mouseEffect.html
+++ b/javascript/effect/mouseEffect.html
@@ -22,7 +22,8 @@
     <main>
         <div class="intro_menu">
             <ul>
-                <li>01. 마우스 이펙트 : 1부터 100까지 출력하기 <a href="dataEffect03.html">Go</a></li>
+                <li>01. 마우스 이펙트 : 마우스 포인터 변경하기 <a href="mouseEffect01.html">Go</a></li>
+                <li>02. 마우스 이펙트 : 마우스 따라다니기 <a href="mouseEffect02.html">Go</a></li>
             </ul>
         </div>
     </main>
