--- a/javascript/effect/parallaxEffect02.html
+++ b/javascript/effect/parallaxEffect02.html
@@ -271,11 +271,11 @@
 
 <body class="img07">
     <header id="header">
-        <h1>Javascript parallax Effect01</h1>
-        <p>패럴렉스 이펙트 - 마우스 따라다니기</p>
+        <h1>Javascript parallax Effect02</h1>
+        <p>패럴렉스 이펙트 - 메뉴 active 활성화</p>
         <ul>
-            <li class="active"><a href="parallaxEffect01.html">1</a></li>
-            <li><a href="parallaxEffect02.html">2</a></li>
+            <li><a href="parallaxEffect01.html">1</a></li>
+            <li class="active"><a href="parallaxEffect02.html">2</a></li>
             <li><a href="parallaxEffect03.html">3</a></li>
             <li><a href="parallaxEffect04.html">4</a></li>
             <li><a href="parallaxEffect05.html">5</a></li>
