--- a/javascript/effect/sliderEffect.html
+++ b/javascript/effect/sliderEffect.html
@@ -25,6 +25,7 @@
                 <li>01. 슬라이드 이펙트 - 트랜지션 효과 <a href="sliderEffect01.html">GO</a></li>
                 <li>02. 슬라이드 이펙트 - 좌로 움직이기 <a href="sliderEffect02.html">GO</a></li>
                 <li>03. 슬라이드 이펙트 - 좌로 움직이기(연속적으로) <a href="sliderEffect03.html">GO</a></li>
+                <li>04. 슬라이드 이펙트 - 좌우로 움직이기 <a href="sliderEffect04.html">GO</a></li>
             </ul>
         </div>
     </main>
