--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -223,7 +223,7 @@
 
 <body class="img07">
     <header id="header">
-        <h1>Javascript parallax Effect01</h1>
+        <h1><a href="parallaxEffect.html">Javascript parallax Effect01</a></h1>
         <p>패럴렉스 이펙트 - 마우스 따라다니기</p>
         <ul>
             <li class="active"><a href="parallaxEffect01.html">1</a></li>
