--- a/javascript/effect/mouseEffect04.html
+++ b/javascript/effect/mouseEffect04.html
@@ -11,7 +11,6 @@
     <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
     <style>
         /* mouseType */
-
         .mouse__wrap {
             width: 100%;
             height: 100vh;
@@ -21,42 +20,56 @@
             flex-direction: column;
             color: #fff;
             overflow: hidden;
+            /* cursor: none; */
+        }
+
+        .mouse__wrap figure {
+            width: 50vw;
+            height: 50vh;
+            /* background: #ccc; */
+            position: relative;
+            overflow: hidden;
+            transition: transform 500ms ease;
             cursor: none;
         }
 
-        .mouse__wrap p {
-            font-size: 2vw;
+        .mouse__wrap figure:hover {
+            transform: scale(1.025);
+        }
+
+        .mouse__wrap figure img {
+            position: absolute;
+            left: -5%;
+            top: -5%;
+            width: 110%;
+            height: 110%;
+            object-fit: cover;
+        }
+
+        .mouse__wrap figure figcaption {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            font-size: 16px;
             line-height: 1.4;
-            font-weight: 300;
+            white-space: nowrap;
+            font-weight: 400;
         }
 
-        .mouse__wrap p:last-child {
-            font-size: 3vw;
-            font-weight: 500;
+        .mouse__cursor {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 20px;
+            height: 20px;
+            background: #fff;
+            border-radius: 50%;
+            z-index: 1000;
+            user-select: none;
+            pointer-events: none;
         }
-
-        .mouse__wrap p span {
-            border-bottom: 0.15vw dashed orange;
-            color: orange;
-        }
-
-        @media (max-width:800px) {
-            .mouse__wrap p {
-                padding: 0 20px;
-                font-size: 20px;
-                text-align: center;
-                line-height: 1.5;
-            }
-
-            .mouse__wrap p:last-child {
-                font-size: 40px;
-                text-align: center;
-                line-height: 1.5;
-                word-break: keep-all;
-            }
-        }
-
-        
 
         .mouse__info {
             position: absolute;
@@ -66,52 +79,18 @@
             line-height: 1.6;
             color: #fff;
         }
-
-        .mouse__cursor {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 10px;
-            height: 10px;
-            z-index: 9999;
-            border-radius: 50%;
-            background: rgba(255, 255, 255, 0.866);
-            user-select: none;
-            pointer-events: none;
-            transition: transform 0.3s, opacity 0.2s;
-        }
-        .mouse__cursor2 {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 30px;
-            height: 30px;
-            z-index: 9998;
-            border-radius: 50%;
-            background: rgba(255, 255, 255, 0.342);
-            user-select: none;
-            pointer-events: none;
-            transition: transform 0.3s, opacity 0.2s;
-        }
-        .mouse__cursor.active{
-            transform: scale(0);
-        }
-        .mouse__cursor2.active{
-            transform: scale(10);
-            background: rgba(255,166,0,0.6);
-        }
     </style>
 </head>
 
-<body class="img10">
+<body class="img04">
     <header id="header">
-        <h1>Javascript Mouse Effect02</h1>
-        <p>마우스 이펙트 - 마우스 따라다니기</p>
+        <h1>Javascript Mouse Effect04</h1>
+        <p>마우스 이펙트 - 이미지효과</p>
         <ul>
             <li><a href="mouseEffect01.html">1</a></li>
-            <li class="active"><a href="mouseEffect02.html">2</a></li>
+            <li><a href="mouseEffect02.html">2</a></li>
             <li><a href="mouseEffect03.html">3</a></li>
-            <li><a href="mouseEffect04.html">4</a></li>
+            <li class="active"><a href="mouseEffect04.html">4</a></li>
             <li><a href="mouseEffect05.html">5</a></li>
             <li><a href="mouseEffect06.html">6</a></li>
             <li><a href="mouseEffect07.html">7</a></li>
@@ -121,12 +100,25 @@
     <main id="main">
         <section id="mouseType">
             <div class="mouse__cursor"></div>
-            <div class="mouse__cursor2"></div>
             <div class="mouse__wrap">
-                <p><span class="style1">Go</span> to <span class=style2>sleep</span>,  then you are the <span class="style3">winner.</span></p>
-                <p><span class="style4">일찍 자라</span> 개운한 너가 바로 <span class="style5">진정한</span> 지금 순간의 <span class="style6">승리자이다.</span></p>
+                <figure>
+                    <img src="../../../assets/slider/effect_bg_04.jpg" alt="">
+                    <figcaption>
+                        <p>winner winner chicken dinner!</p>
+                        <p>잠을 일찍 자는자가 세상을 지배한다.</p>
+                    </figcaption>
+                </figure>
             </div>
         </section>
+
+        <div class="mouse__info">
+            <ul>
+                <li>mousePageX : <span class="clientX">0</span>px</li>
+                <li>mousePageY : <span class="clientY">0</span>px</li>
+                <li>centerPageX : <span class="centerPageX">0</span>px</li>
+                <li>centerPageY : <span class="centerPageY">0</span>px</li>
+            </ul>
+        </div>
     </main>
     <!-- //main -->
     <footer id="footer">
@@ -247,60 +239,52 @@
         </div>
     </footer>
     <!-- //footer -->
+
     <script src="../assets/js/highlight.min.js"></script>
     <script src="../assets/js/common.js"></script>
     <script src="../assets/js/gsap.min.js"></script>
     <script>
         const cursor = document.querySelector(".mouse__cursor");
-        const cursor2 = document.querySelector(".mouse__cursor2");
-        const span = document.querySelectorAll(".mouse__wrap span");
+        const cursorRect = cursor.getBoundingClientRect();
 
-        window.addEventListener("mousemove", e => {
-            //커서 좌표값 할당
-            // cursor.style.left = e.pageX -5 + "px";
-            // cursor.style.top = e.pageY -5+ "px";
-            // cursor2.style.left = e.pageX -15+ "px";
-            // cursor2.style.top = e.pageY -15+ "px";
+        document.querySelector(".mouse__wrap figure").addEventListener("mousemove", (e) => {
+            // 커서
 
-            gsap.to(cursor, {duration: 0.3, left: e.pageX -5, top: e.pageY -5})
-            gsap.to(cursor2, {duration: 0.8, left: e.pageX -15, top: e.pageY -15})
-
-            //오버 효과
-            //mouseenter(자식 요소만) / mouseover(부모요소부터 자식까지 모두) / 이벤트 버블링
-            span.forEach(span => {
-                span.addEventListener("mouseenter", ()=>{
-                    cursor.classList.add("active");
-                    cursor2.classList.add("active");
-                })
-                span.addEventListener("mouseleave", ()=>{
-                    cursor.classList.remove("active");
-                    cursor2.classList.remove("active");
-                })
-            });
-            document.querySelectorAll("#header ul li a").forEach(a => {
-                a.addEventListener("mouseenter", ()=>{
-                    cursor.classList.add("active");
-                    cursor2.classList.add("active");
-                })
-                a.addEventListener("mouseleave", ()=>{
-                    cursor.classList.remove("active");
-                    cursor2.classList.remove("active");
-                })
+            gsap.to(cursor, {
+                duration: .2,
+                left: e.pageX - cursorRect.width / 2,
+                top: e.pageY - cursorRect.height / 2,
             })
 
-            document.querySelector(".modal__btn").addEventListener("mouseenter",()=>{
-                cursor.classList.add("active");
-                cursor2.classList.add("active");
-            })
-            document.querySelector(".modal__btn").addEventListener("mouseleave",()=>{
-                cursor.classList.remove("active");
-                cursor2.classList.remove("active");
+            //마우스 좌표 값
+            let mousePageX = e.pageX;
+            let mousePageY = e.pageY;
+
+            // 전체 가로
+            // window.innerWidth; //1680 : 브라우저 크기
+            // window.outerWidth; //774 : 브라우저 크기 (스크롤바 포함)
+            // window.screen.width; //1680 : 화면 크기
+
+            // 마우스 좌표 값 가운데로 초기화
+            // 전체 길이/2 - 마우스 좌표값 == 0
+            let centerPageX = window.innerWidth/2 - mousePageX;
+            let centerPageY = window.innerHeight/2 - mousePageY;
+
+            //이미지 움직이기
+            const imgMove = document.querySelector(".mouse__wrap figure img");
+            // imgMove.style.transform = "translate("+centerPageX/20+"px, "+centerPageY/20+"px)";
+
+            gsap.to(imgMove, {
+                duration: 0.3,
+                x: centerPageX/20,
+                y: centerPageY/20,
             })
 
-            // 화살표 함수가 없어야만 this 사용 가능합니다.
-            // span.forEach(function(){
-            //     this.addEventListener("mouseenter", function(){});
-            // })
+            // 출력
+            document.querySelector(".clientX").textContent = mousePageX;
+            document.querySelector(".clientY").textContent = mousePageY;
+            document.querySelector(".centerPageX").textContent = centerPageX;
+            document.querySelector(".centerPageY").textContent = centerPageY;
         })
     </script>
 </body>
