--- a/javascript/study/study_22.09/web_odapnote.html
+++ b/javascript/study/study_22.09/web_odapnote.html
@@ -70,7 +70,7 @@
             </p>
 
             <hr>
-            <div class="t_iframe" style="height: 1000px; padding-top: 0;">
+            <div class="t_iframe" style="background: #fff; height: 1000px; padding-top: 0;">
                 <iframe src="https://kimsangjunv1.github.io/coding/javascript/study/study_22.09/web_study_test.html" frameborder="0"></iframe>
             </div>
 
