--- a/javascript/study/study_22.09/web_study_test.html
+++ b/javascript/study/study_22.09/web_study_test.html
@@ -269,7 +269,7 @@ code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shad
     <hr>
 
     <div id="sample3" class="sample">
-        <h2>09. <span class="dot"></span></h2>
+        <h2>09. while을 통해 a의 값이 10미만이 될때가지 a를 1씩 더해 a의 값에 2를 나눈 나머지 값이 1이면 건너뛰고 이외에는 sum에 a의 현재값을 더한 후 sum을 출력하는 문제입니다.<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     //1. while을 통해 a의 값이 10 미만(a&lt;10)이 될때까지 하단의 2~4을 반복해줍니다.<br>
