--- a/javascript/study/study_22.09/web_study_test_custom.html
+++ b/javascript/study/study_22.09/web_study_test_custom.html
@@ -219,7 +219,7 @@ code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shad
         <h2>01. 다음 문제의 출력 결과를 적으시오<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
-    function func(){
+    function cookingMama(){
         let cook = ['당근','소세지','삼겹살','계란후라이']
         for(sel=0; sel&lt;cook.length; sel++){
             if(cook[sel]!=='당근'){
