--- a/javascript/study/study_22.09/web_study_test_custom.html
+++ b/javascript/study/study_22.09/web_study_test_custom.html
@@ -456,7 +456,7 @@ code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shad
     function func(afterSchool){
         let list = ['a','b','c']
         let i = 0;
-        if(i<=list.lenght){
+        if(i<=list.length){
             i=1;
         } else{
             i=10;
@@ -642,7 +642,7 @@ code[class*=language-],pre[class*=language-]{color:#000;background:0 0;text-shad
             // function func(afterSchool){
             //     let list = ['a','b','c']
             //     let i = 0;
-            //     if(i<=list.lenght){
+            //     if(i<=list.length){
             //         i=1;
             //     } else{
             //         i=10;
